src/components/header.css
.top-nav {
    --nav-bg: white;
    font-family: 'Raleway', sans-serif;
    font-weight: normal;
    background: var(--nav-bg);
    position: relative;
    min-height: 8vh;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 2.5vh 4vw;
    box-shadow: var(--rok-shadow_bottom);
    z-index: 10;
}

.top-nav,
.top-nav .nav__main,
.top-nav .nav__login {
    background: var(--nav-bg);
}

.top-nav a {
    text-decoration: none;
    display: inline-block;
    transition: all .12s ease-in-out;
    position: relative;
}

.top-nav a:not(.site-logo):not(.login_avatar)::after {
    position: absolute;
    content: '';
    top: 100%;
    left: 0;
    width: 0;
    height: 2px;
    background: var(--rok-gold-1_hex);
    transition: width .13s ease-in-out;
}

/* .top-nav a:hover {
    transform: scale(1.08);
} */

.site-logo {
    max-height: 100%;
    max-width: 20vw;
}
.site-log:hover {
    transform: scale(1.04);
}

.site-logo img {
    max-height: 100%;
    width: 100%;
}


/* Hamburger menu base styles (more in mobile media query) */
.top-nav .hamburger {
    display: none;
}

.nav__mobile-wrap {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: space-between;
}

.nav__login {
    margin-block-end: 3vh;
}

.nav__login a {
    color: #e4ab25;
    font-size: 90%;
    margin: 0 1.5em;
}

.top-nav .login_wrap {
    display: flex;
    align-items: center;
}

.top-nav [aria-current]:not([aria-current="false"]) {
    position: relative;
    font-weight: 600;
}

.top-nav a:not(.site-logo):hover::after,
.top-nav a:not(.site-logo):focus::after,
.top-nav [aria-current]:not([aria-current="false"]):not(.site-logo)::after {
    width: 100%;
}

.nav__login a:last-child {
    margin-right: 0;
}

#btn__login {
    background: var(--rok-slate-blue_hex);
    color: white;
    text-transform: uppercase;
    padding: .4em 1.25em;
    border-radius: .3em;
}

#btn__login::after {
    display: none;
}

.nav__main {
    color: var(--rok-gray-1_hex);
    text-transform: uppercase;
}

.nav__main > * {
    margin: 0 1vw;
}
.nav__main > *:first-child {
    margin-inline-start: 0;
}
.nav__main > *:last-child {
    margin-inline-end: 0;
}

.dropdown-group {
    position: relative;
    display: inline-block;
}

.has-dropdown {
    position: relative;
}
.has-dropdown::after {
    content: '⬇';
}

.nav__dropdown {
    position: absolute;
    top: 100%;
    width: 100%;
    left: 0;
    opacity: 0;
    background: white;
    padding: 2em 1em;
    box-shadow: 0 0 0 rgba(0,0,0,.4),
                0 0 0 rgba(0,0,0,.2);
    transition: all .12s ease-in-out;
}

.has-dropdown:hover + .nav__dropdown,
.has-dropdown:focus + .nav__dropdown,
.nav__dropdown:hover,
.nav__dropdown:focus-within {
    opacity: 1;
    box-shadow: 0 5vh 1.5vh rgba(0,0,0,0.06),
                0 1.3vh 2.8vh rgba(0,0,0,0.02);
}

.nav__login {
    display: flex;
    align-items: center;
}

.top-nav .login_avatar {
     display: flex;
     align-items: center;
     height: 2.25em;
}

.top-nav .login_avatar img {
    margin: 0 .5em;
    max-height: 100%;
    border-radius: 50%;
    object-fit: scale-down;
}


/* MOBILE STYLING */
@media (max-width: 700px) {
    header {
        position: sticky;
        z-index: 10;
        top: 0px;
    }

    .site-logo {
        max-width: 45vw;
    }

    .top-nav .hamburger {
        display: initial;
    }

    .nav__mobile-wrap {
        position: absolute;
        top: 100%;
        left: 0;
        flex-direction: column;
        align-items: stretch;

        display: none;
        height: 0;
        width: 100%;
        transition: all .12s ease-in-out;
    }

    .top-nav .nav__mobile-wrap.open {
        display: flex;
        height: 100%;
    }

    .top-nav .nav__main {
        order: -1;
        flex-direction: column;
    }

    .nav__login a {
        font-size: 1rem;
    }
    

    .top-nav .nav__main > a {
        padding: 4vh 8vw;
        border-top: solid .5px;
        display: block;
        width: 100%;
        margin: 0;
        box-sizing: border-box;
    }

    .top-nav .nav__main > a:last-child {
        border-bottom: solid .5px;
    }

    .top-nav .nav__login {
        background: #f7f7f7;
        display: block;
        max-width: 100%;
        padding: 5vh 8vw;
        box-shadow: var(--rok-shadow_bottom);
    }

    .top-nav .login_wrap {
        display: block;
    }
    
    .top-nav .nav__login a {
        margin: 1vh 0;
        font-size: 1rem; 
        display: block;
    }

    .top-nav .nav__login [href='#logout'] {
        border: solid 1px var(--rok-slate-blue_hex);
        color: var(--rok-slate-blue_hex);
        padding: .5em 1.5em;
        border-radius: .25em;
        width: fit-content;
    }

    #btn__login {
        margin: 0;
        padding: .5em 2em;
        width: fit-content;
    }

    .nav__login a:first-of-type {
        margin-block-end: 3vh;
        padding: .5em 2em;
    }

    .top-nav .nav__login a.login_avatar {
        padding: .5em 0;
        display: flex;
    }
}

